--- a/Echoes/Base.lproj/Main.storyboard
+++ b/Echoes/Base.lproj/Main.storyboard
@@ -681,38 +681,20 @@
                                     <segment title="Female"/>
                                 </segments>
                             </segmentedControl>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="KrK-tE-GzK">
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="P9j-5Z-5jn">
                                 <rect key="frame" x="0.0" y="545" width="600" height="55"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="55" id="TAa-nd-aWb"/>
+                                    <constraint firstAttribute="height" constant="55" id="3lR-Uv-aV5"/>
                                 </constraints>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="R7z-Ue-8TY">
-                                    <size key="itemSize" width="50" height="50"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="StatCellIdentifier" id="Lxo-wL-46F">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                        </view>
-                                    </collectionViewCell>
-                                </cells>
                                 <connections>
-                                    <outlet property="dataSource" destination="qSY-Ot-GtE" id="hBG-gr-P6D"/>
-                                    <outlet property="delegate" destination="qSY-Ot-GtE" id="8Sh-T6-o1R"/>
+                                    <segue destination="QKO-EL-yii" kind="embed" identifier="StatsCollectionViewEmbed" id="EA4-Zs-jO1"/>
                                 </connections>
-                            </collectionView>
+                            </containerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstAttribute="width" secondItem="P9j-5Z-5jn" secondAttribute="width" id="10b-pc-gvK"/>
                             <constraint firstAttribute="trailing" secondItem="M9g-87-Wtv" secondAttribute="trailing" id="8eP-EF-6Yx"/>
-                            <constraint firstAttribute="centerX" secondItem="KrK-tE-GzK" secondAttribute="centerX" id="Btc-Ko-INc"/>
                             <constraint firstItem="M9g-87-Wtv" firstAttribute="top" secondItem="En8-ha-hzX" secondAttribute="bottom" constant="25" id="Imi-qP-qq2"/>
                             <constraint firstItem="ffg-ia-HDt" firstAttribute="leading" secondItem="pJZ-K6-cQ3" secondAttribute="leadingMargin" constant="20" id="Kex-YT-rem"/>
                             <constraint firstItem="M9g-87-Wtv" firstAttribute="leading" secondItem="pJZ-K6-cQ3" secondAttribute="leading" id="LOH-R1-RlD"/>
@@ -720,12 +702,12 @@
                             <constraint firstItem="En8-ha-hzX" firstAttribute="top" secondItem="ffg-ia-HDt" secondAttribute="bottom" constant="5" id="N9x-Sa-a8d"/>
                             <constraint firstItem="ffg-ia-HDt" firstAttribute="top" secondItem="hN7-j2-aOH" secondAttribute="bottom" id="TF4-Ei-NEy"/>
                             <constraint firstItem="M9g-87-Wtv" firstAttribute="width" secondItem="pJZ-K6-cQ3" secondAttribute="width" id="aI4-r5-Pd7"/>
-                            <constraint firstItem="nMN-pO-Dx8" firstAttribute="top" secondItem="KrK-tE-GzK" secondAttribute="bottom" id="bM1-JR-yFj"/>
                             <constraint firstAttribute="centerX" secondItem="En8-ha-hzX" secondAttribute="centerX" id="eTB-b7-nOU"/>
                             <constraint firstItem="ffg-ia-HDt" firstAttribute="width" secondItem="En8-ha-hzX" secondAttribute="width" id="eoF-ma-GFm"/>
                             <constraint firstAttribute="centerX" secondItem="M9g-87-Wtv" secondAttribute="centerX" id="ftl-Hh-EqJ"/>
-                            <constraint firstItem="KrK-tE-GzK" firstAttribute="width" secondItem="pJZ-K6-cQ3" secondAttribute="width" id="hI7-aW-UwD"/>
                             <constraint firstAttribute="centerX" secondItem="ffg-ia-HDt" secondAttribute="centerX" id="l9K-td-R8T"/>
+                            <constraint firstItem="nMN-pO-Dx8" firstAttribute="top" secondItem="P9j-5Z-5jn" secondAttribute="bottom" id="s4p-qW-Mf5"/>
+                            <constraint firstAttribute="centerX" secondItem="P9j-5Z-5jn" secondAttribute="centerX" id="sPq-Re-7MV"/>
                             <constraint firstItem="M9g-87-Wtv" firstAttribute="top" secondItem="ffg-ia-HDt" secondAttribute="bottom" id="yLx-fc-NiP"/>
                         </constraints>
                         <variation key="default">
@@ -757,13 +739,35 @@
                         <outlet property="classPickerHeightConstraint" destination="GHh-B7-jZe" id="3in-e3-Jqk"/>
                         <outlet property="doneButton" destination="tcJ-Q4-Xki" id="bih-Cw-4aO"/>
                         <outlet property="genderSegmentedControl" destination="En8-ha-hzX" id="cqX-D8-1U7"/>
-                        <outlet property="statsCollectionView" destination="KrK-tE-GzK" id="lv9-hd-Fll"/>
-                        <outlet property="statsFlowLayout" destination="R7z-Ue-8TY" id="RD4-Qb-8at"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IlI-va-4Oi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1073" y="-427"/>
+            <point key="canvasLocation" x="1078" y="-427"/>
+        </scene>
+        <!--Stats Collection View Controller-->
+        <scene sceneID="aJT-nJ-G9R">
+            <objects>
+                <collectionViewController storyboardIdentifier="StatsCollectionView" useStoryboardIdentifierAsRestorationIdentifier="YES" id="QKO-EL-yii" customClass="LCKStatsCollectionViewController" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="RUX-h6-LBX">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="b8r-eH-HVz">
+                            <size key="itemSize" width="50" height="50"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells/>
+                        <connections>
+                            <outlet property="dataSource" destination="QKO-EL-yii" id="gGd-p3-HpK"/>
+                            <outlet property="delegate" destination="QKO-EL-yii" id="pXH-eO-o0F"/>
+                        </connections>
+                    </collectionView>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yhN-3i-Ela" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1762" y="-427"/>
         </scene>
         <!--Inventory-->
         <scene sceneID="apN-AD-IRN">
@@ -851,6 +855,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="9Os-uu-hNJ"/>
-        <segue reference="yxC-a4-4HD"/>
+        <segue reference="JQJ-ts-Pi4"/>
     </inferredMetricsTieBreakers>
 </document>
