--- a/Echoes/Base.lproj/Main.storyboard
+++ b/Echoes/Base.lproj/Main.storyboard
@@ -427,7 +427,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Item Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JPB-pK-g1L" userLabel="Item Name Label">
-                                <rect key="frame" x="56" y="25" width="488" height="20.5"/>
+                                <rect key="frame" x="44" y="25" width="512" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
@@ -482,7 +482,7 @@
                                 </constraints>
                             </scrollView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Requirements Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lEb-UE-1FJ" userLabel="Requirements Label">
-                                <rect key="frame" x="420" y="565" width="153.5" height="30"/>
+                                <rect key="frame" x="420.5" y="565" width="153.5" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
@@ -508,13 +508,17 @@
                                     <action selector="useItemButtonTapped:" destination="rat-Uo-uIn" eventType="touchUpInside" id="3tv-Nb-GvN"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gqC-Gg-7QM" userLabel="Item Type Image View">
-                                <rect key="frame" x="26" y="25" width="20" height="20"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bw2-45-JzQ" userLabel="Close Button">
+                                <rect key="frame" x="0.0" y="15" width="44" height="44"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="20" id="LGK-Sy-5ee"/>
-                                    <constraint firstAttribute="height" constant="20" id="UAX-n9-cdH"/>
+                                    <constraint firstAttribute="height" constant="44" id="Djc-UG-G8S"/>
+                                    <constraint firstAttribute="width" constant="44" id="Mb4-eg-HCe"/>
                                 </constraints>
-                            </imageView>
+                                <state key="normal" image="CloseIcon"/>
+                                <connections>
+                                    <action selector="closeButtonTapped:" destination="rat-Uo-uIn" eventType="touchUpInside" id="JkB-W5-BU9"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -524,7 +528,6 @@
                             <constraint firstItem="WJr-MS-l58" firstAttribute="leading" secondItem="JFu-mu-DH0" secondAttribute="leadingMargin" constant="10" id="9qq-vK-Xml"/>
                             <constraint firstItem="fFy-TS-wEj" firstAttribute="top" secondItem="b4G-c9-AFd" secondAttribute="bottom" constant="10" id="Cgy-if-Xo1"/>
                             <constraint firstAttribute="centerX" secondItem="ytK-Ez-gqD" secondAttribute="centerX" id="HP9-Pi-3rW"/>
-                            <constraint firstItem="gqC-Gg-7QM" firstAttribute="trailing" secondItem="JFu-mu-DH0" secondAttribute="trailing" constant="-7" id="HXi-RN-Ghy"/>
                             <constraint firstItem="ytK-Ez-gqD" firstAttribute="top" secondItem="fFy-TS-wEj" secondAttribute="bottom" id="J0v-7e-WR3"/>
                             <constraint firstAttribute="centerX" secondItem="fFy-TS-wEj" secondAttribute="centerX" id="N8j-Up-ahg"/>
                             <constraint firstItem="lEb-UE-1FJ" firstAttribute="height" secondItem="WJr-MS-l58" secondAttribute="height" id="NtC-IK-ZUF"/>
@@ -532,23 +535,20 @@
                             <constraint firstAttribute="width" secondItem="fFy-TS-wEj" secondAttribute="width" id="QqS-es-quA"/>
                             <constraint firstAttribute="trailingMargin" secondItem="kv3-z2-tGF" secondAttribute="trailing" constant="10" id="SGs-pC-YNg"/>
                             <constraint firstAttribute="trailingMargin" secondItem="lEb-UE-1FJ" secondAttribute="trailing" constant="10" id="SHX-RR-Md3"/>
+                            <constraint firstItem="JPB-pK-g1L" firstAttribute="leading" secondItem="bw2-45-JzQ" secondAttribute="trailing" id="T5o-KF-kni"/>
+                            <constraint firstItem="bw2-45-JzQ" firstAttribute="top" secondItem="JAY-ii-Xif" secondAttribute="bottom" constant="-5" id="ZA9-oc-veN"/>
                             <constraint firstItem="k9C-Ky-Ncj" firstAttribute="top" secondItem="lEb-UE-1FJ" secondAttribute="bottom" constant="5" id="cZJ-Of-Req"/>
-                            <constraint firstItem="b4G-c9-AFd" firstAttribute="top" secondItem="gqC-Gg-7QM" secondAttribute="bottom" constant="5" id="g6G-2H-DdF"/>
                             <constraint firstAttribute="centerX" secondItem="b4G-c9-AFd" secondAttribute="centerX" id="ggu-o6-0lU"/>
                             <constraint firstItem="WJr-MS-l58" firstAttribute="top" secondItem="ytK-Ez-gqD" secondAttribute="bottom" id="h3E-Ob-ltu"/>
                             <constraint firstAttribute="centerX" secondItem="JPB-pK-g1L" secondAttribute="centerX" id="jqf-po-fuW"/>
                             <constraint firstItem="b4G-c9-AFd" firstAttribute="top" secondItem="JPB-pK-g1L" secondAttribute="bottom" constant="5" id="ky5-jD-cFu"/>
-                            <constraint firstItem="gqC-Gg-7QM" firstAttribute="leading" secondItem="JPB-pK-g1L" secondAttribute="trailing" constant="10" id="lX5-Gi-z1a"/>
                             <constraint firstItem="kv3-z2-tGF" firstAttribute="height" secondItem="JPB-pK-g1L" secondAttribute="height" id="mby-3O-8rI"/>
-                            <constraint firstItem="JPB-pK-g1L" firstAttribute="leading" secondItem="gqC-Gg-7QM" secondAttribute="trailing" constant="10" id="q7E-if-84P"/>
-                            <constraint firstItem="gqC-Gg-7QM" firstAttribute="leading" secondItem="JFu-mu-DH0" secondAttribute="leadingMargin" constant="10" id="tpW-L3-BmO"/>
+                            <constraint firstItem="bw2-45-JzQ" firstAttribute="leading" secondItem="JFu-mu-DH0" secondAttribute="leading" id="rX5-XW-Spa"/>
                             <constraint firstItem="lEb-UE-1FJ" firstAttribute="top" secondItem="WJr-MS-l58" secondAttribute="top" id="u4F-qU-nJy"/>
                             <constraint firstItem="kv3-z2-tGF" firstAttribute="top" secondItem="JPB-pK-g1L" secondAttribute="top" constant="3" id="w8E-8Y-w1a"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
-                                <exclude reference="HXi-RN-Ghy"/>
-                                <exclude reference="lX5-Gi-z1a"/>
                                 <exclude reference="8KE-EZ-B3z"/>
                                 <exclude reference="mby-3O-8rI"/>
                             </mask>
@@ -562,7 +562,6 @@
                         <outlet property="itemImageView" destination="fFy-TS-wEj" id="cC6-MF-zCY"/>
                         <outlet property="itemNameLabel" destination="JPB-pK-g1L" id="Lz1-ou-SqL"/>
                         <outlet property="itemRequirementsLabel" destination="lEb-UE-1FJ" id="7bF-vg-j7W"/>
-                        <outlet property="itemTypeImageView" destination="gqC-Gg-7QM" id="Eph-fj-CWo"/>
                         <outlet property="nameSeparatorLineView" destination="b4G-c9-AFd" id="e21-R9-AcY"/>
                         <outlet property="unequipButton" destination="WJr-MS-l58" id="CqZ-Fq-wv1"/>
                         <outlet property="useItemButton" destination="kv3-z2-tGF" id="nxg-Wv-B8x"/>
@@ -848,6 +847,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="CloseIcon" width="14" height="14"/>
         <image name="DownArrow.png" width="21" height="12"/>
         <image name="SilhoutteFemale.png" width="161" height="331"/>
         <image name="UpArrow.png" width="21" height="12"/>
