--- a/Echoes/Base.lproj/Main.storyboard
+++ b/Echoes/Base.lproj/Main.storyboard
@@ -497,9 +497,10 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kv3-z2-tGF">
-                                <rect key="frame" x="544" y="28" width="30" height="20"/>
+                                <rect key="frame" x="540" y="15" width="44" height="44"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="20" id="MZw-pI-VdC"/>
+                                    <constraint firstAttribute="width" constant="44" id="1dJ-gG-5iF"/>
+                                    <constraint firstAttribute="height" constant="44" id="MZw-pI-VdC"/>
                                 </constraints>
                                 <state key="normal" title="Use">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -533,11 +534,12 @@
                             <constraint firstItem="lEb-UE-1FJ" firstAttribute="height" secondItem="WJr-MS-l58" secondAttribute="height" id="NtC-IK-ZUF"/>
                             <constraint firstItem="b4G-c9-AFd" firstAttribute="width" secondItem="JFu-mu-DH0" secondAttribute="width" id="P26-xf-okH"/>
                             <constraint firstAttribute="width" secondItem="fFy-TS-wEj" secondAttribute="width" id="QqS-es-quA"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="kv3-z2-tGF" secondAttribute="trailing" constant="10" id="SGs-pC-YNg"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="kv3-z2-tGF" secondAttribute="trailing" id="SGs-pC-YNg"/>
                             <constraint firstAttribute="trailingMargin" secondItem="lEb-UE-1FJ" secondAttribute="trailing" constant="10" id="SHX-RR-Md3"/>
                             <constraint firstItem="JPB-pK-g1L" firstAttribute="leading" secondItem="bw2-45-JzQ" secondAttribute="trailing" id="T5o-KF-kni"/>
                             <constraint firstItem="bw2-45-JzQ" firstAttribute="top" secondItem="JAY-ii-Xif" secondAttribute="bottom" constant="-5" id="ZA9-oc-veN"/>
                             <constraint firstItem="k9C-Ky-Ncj" firstAttribute="top" secondItem="lEb-UE-1FJ" secondAttribute="bottom" constant="5" id="cZJ-Of-Req"/>
+                            <constraint firstItem="kv3-z2-tGF" firstAttribute="top" secondItem="JAY-ii-Xif" secondAttribute="bottom" constant="-5" id="e3R-VZ-Amx"/>
                             <constraint firstAttribute="centerX" secondItem="b4G-c9-AFd" secondAttribute="centerX" id="ggu-o6-0lU"/>
                             <constraint firstItem="WJr-MS-l58" firstAttribute="top" secondItem="ytK-Ez-gqD" secondAttribute="bottom" id="h3E-Ob-ltu"/>
                             <constraint firstAttribute="centerX" secondItem="JPB-pK-g1L" secondAttribute="centerX" id="jqf-po-fuW"/>
@@ -545,12 +547,13 @@
                             <constraint firstItem="kv3-z2-tGF" firstAttribute="height" secondItem="JPB-pK-g1L" secondAttribute="height" id="mby-3O-8rI"/>
                             <constraint firstItem="bw2-45-JzQ" firstAttribute="leading" secondItem="JFu-mu-DH0" secondAttribute="leading" id="rX5-XW-Spa"/>
                             <constraint firstItem="lEb-UE-1FJ" firstAttribute="top" secondItem="WJr-MS-l58" secondAttribute="top" id="u4F-qU-nJy"/>
-                            <constraint firstItem="kv3-z2-tGF" firstAttribute="top" secondItem="JPB-pK-g1L" secondAttribute="top" constant="3" id="w8E-8Y-w1a"/>
+                            <constraint firstItem="kv3-z2-tGF" firstAttribute="top" secondItem="JPB-pK-g1L" secondAttribute="top" constant="-10" id="w8E-8Y-w1a"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
                                 <exclude reference="8KE-EZ-B3z"/>
                                 <exclude reference="mby-3O-8rI"/>
+                                <exclude reference="w8E-8Y-w1a"/>
                             </mask>
                         </variation>
                     </view>
