--- a/Dark Days/Dark Days/HeroCell.xib
+++ b/Dark Days/Dark Days/HeroCell.xib
@@ -4,7 +4,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -17,13 +16,13 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SnH-Ib-t49">
-                        <rect key="frame" x="13" y="13" width="27.5" height="27.5"/>
+                        <rect key="frame" x="5" y="5" width="43.5" height="43.5"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="SnH-Ib-t49" secondAttribute="height" multiplier="1:1" id="hmd-zh-0GT"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TIf-kr-Ffy">
-                        <rect key="frame" x="45.5" y="16.5" width="269.5" height="20.5"/>
+                        <rect key="frame" x="53.5" y="16.5" width="261.5" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -31,10 +30,10 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="TIf-kr-Ffy" firstAttribute="leading" secondItem="SnH-Ib-t49" secondAttribute="trailing" constant="5" id="KW6-ZT-cZu"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="TIf-kr-Ffy" secondAttribute="trailingMargin" constant="5" id="d01-GL-8L4"/>
-                    <constraint firstItem="SnH-Ib-t49" firstAttribute="leading" secondItem="DY8-Ek-OGq" secondAttribute="leadingMargin" constant="5" id="fFa-T6-Fnp"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="SnH-Ib-t49" secondAttribute="bottom" constant="5" id="fnX-64-j2O"/>
-                    <constraint firstItem="SnH-Ib-t49" firstAttribute="top" secondItem="DY8-Ek-OGq" secondAttribute="topMargin" constant="5" id="jO6-rI-fSI"/>
+                    <constraint firstAttribute="trailing" secondItem="TIf-kr-Ffy" secondAttribute="trailing" constant="5" id="d01-GL-8L4"/>
+                    <constraint firstItem="SnH-Ib-t49" firstAttribute="leading" secondItem="DY8-Ek-OGq" secondAttribute="leading" constant="5" id="fFa-T6-Fnp"/>
+                    <constraint firstAttribute="bottom" secondItem="SnH-Ib-t49" secondAttribute="bottom" constant="5" id="fnX-64-j2O"/>
+                    <constraint firstItem="SnH-Ib-t49" firstAttribute="top" secondItem="DY8-Ek-OGq" secondAttribute="top" constant="5" id="jO6-rI-fSI"/>
                     <constraint firstItem="TIf-kr-Ffy" firstAttribute="centerY" secondItem="DY8-Ek-OGq" secondAttribute="centerY" id="xPx-Jc-dvT"/>
                 </constraints>
             </tableViewCellContentView>
